updated counter logic and fixed bugs

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body{
   justify-content: center;
   align-items: center;
   display: flex;
-  height: 20vh;  
+  height: 35vh;  
 }
 form {
   background: white;
@@ -17,6 +17,7 @@ h2 {
   margin-bottom: 20px;
   text-align: center;
   font-weight:bolder;
+  width:300px;
 }
 p {
   font-size: 30px;
@@ -47,4 +48,5 @@ input {
   border: 1px solid #ccc;
   text-align: center;
   font-size: 16px;
+  width:400px;
 }
